system/clusters/creodias/resource-management/open-science-catalog-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-science-catalog-frontend
  namespace: rm
  labels:
    app.kubernetes.io/instance: open-science-catalog-frontend
    app.kubernetes.io/name: open-science-catalog-frontend
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: open-science-catalog-frontend
      app.kubernetes.io/name: open-science-catalog-frontend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: open-science-catalog-frontend
        app.kubernetes.io/name: open-science-catalog-frontend
    spec:
      containers:
      - name: open-science-catalog-frontend
        image: 'eoepca/open-science-catalog-frontend:v1.0.12'
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
        resources:
          limits:
            cpu: 0.5
            memory: 0.5Gi
          requests:
            cpu: 0.2
            memory: 256Mi
      imagePullSecrets:
      - name: flux-open-science-catalog-frontend
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
