system/clusters/creodias/resource-management/open-science-catalog-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-science-catalog-frontend
  namespace: rm
  labels:
    app.kubernetes.io/instance: open-science-catalog-frontend
    app.kubernetes.io/name: open-science-catalog-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  tls:
    - hosts:
        - opensciencedata.esa.int
      secretName: open-science-catalog-frontend-tls
  rules:
    - host: opensciencedata.esa.int
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-science-catalog-frontend
                port:
                  number: 80
